--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mc Cat on Solana | Get him out of the Wage slaving | Meme</title>
+    <title>BAE CON | Cute & Tasty | Meme</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
 <body>
     <header class="main-header">
         <h1>
-            <span>GET HIM OUT OF THE RAT RACE!</span>
+            <span>She is not just a Pig, She is the cutest pig on the internets!</span>
             <img class="fadein-wrap" src="assets/images/mccat.png" alt="mc cat logo">
         </h1>
     </header>
