--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ee99ff" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary" />
     <meta name="”twitter:image”" content="assets/images/logo512.png" />
