--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <section style="background:black;" class="ride-or-die">
+        <section style="background:#ee99ff;" class="ride-or-die">
         <div class="fadein-wrap"><p>ACT NOW!<br>Save the Mc Cat Out from wageslaving<br>
             <a href="https://dexscreener.com/" style="color:rgb(255, 199, 44);" target="_blank">Buy on Dexscreener</a><br>
                </p>
