--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ The only way to do that is to spread Mc Cat wisdom words: "Buy the fucking token
         </ul>            
         </section>
 
-        <section style="background:black;" class="road-map">
+        <section style="background:#ee99ff;" class="road-map">
             <h2>
                 <span>Roadmap</span>
                 <img class="fadein-wrap" src="assets/images/roadmap.png" alt="Roadmap -  title">
