--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
              <div class="fadein-wrap"><p>CONTRACT Address<br><br>
             <a href="https://solscan.IO" style="color:rgb(255, 199, 44);" target="_blank">OXXXXXXXXXXXXXXXXX</a><br>
             <h2>
-                <span>The cutest cat on Solana</span>
+                <span>The cutest pig on Solana</span>
             </p>
             <p class="fadein-wrap">
-                Our number one goal is to help cat finally make it
             </p>
             <p class="fadein-wrap">
-The only way to do that is to spread Mc Cat wisdom words: "Buy the fucking token, I'm tired of flipping burgers"
             </p>
             <p class="fadein-wrap">
-                Join the move!<br>It's time to evade... 
             </p>
         <ul class="socials fadein-wrap">
             <li>
