--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main>
         <section style="background:#ee99ff;" class="ride-or-die">
-        <div class="fadein-wrap"><p>ACT NOW!<br>Save the Mc Cat Out from wageslaving<br>
+        <div class="fadein-wrap"><p>Tasty BAE<br>Save the Pig from wageslaving<br>
             <a href="https://dexscreener.com/" style="color:rgb(255, 199, 44);" target="_blank">Buy on Dexscreener</a><br>
                </p>
              <div class="fadein-wrap"><p>CONTRACT Address<br><br>
