--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             </p>
         <ul class="socials fadein-wrap">
             <li>
-                <a href="https://twitter.com/" target="_blank">
+                <a href="https://twitter.com/baeconpig" target="_blank">
                     <img src="assets/images/twitter.png" alt="Twitter - Mc Cat">
                 </a>
             </li>
         </ul>    
              <ul class="socials fadein-wrap">
             <li>
-                <a href="https://telegram.com" target="_blank">
+                <a href="https://t.me/baeconpig" target="_blank">
                     <img src="assets/images/telegram.png" alt="Twitter - Mc Cat">
                 </a>
             </li>
