--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <main>
         <section style="background:#ee99ff;" class="ride-or-die">
         <div class="fadein-wrap"><p>Cute & Tasty<br>Save the Pig from the pan crisps<br>
-            <a href="https://dexscreener.com/" style="color:rgb(255, 199, 44);" target="_blank">Buy on Dexscreener</a><br>
+            <a href="https://dexscreener.com/FFEpKApKL6a1i6fngiJRangmcaxbkfau2AwCxaHtVsnU" style="color:rgb(255, 199, 44);" target="_blank">Buy on Dexscreener</a><br>
                </p>
              <div class="fadein-wrap"><p>CONTRACT Address<br><br>
-            <a href="https://solscan.IO" style="color:rgb(255, 199, 44);" target="_blank">OXXXXXXXXXXXXXXXXX</a><br>
+            <a href="https://solscan.io/address/FFEpKApKL6a1i6fngiJRangmcaxbkfau2AwCxaHtVsnU" style="color:rgb(255, 199, 44);" target="_blank">FFEpKApKL6a1i6fngiJRangmcaxbkfau2AwCxaHtVsnU</a><br>
             <h2>
                 <span>The cutest pig on Solana</span>
             </p>
